Assignment2_Zhao_Duo/tests/automated/tests/good/BasicNumbers-0Chomped.calc
a .0 b 1. c 2.3 d 34.5 e 6.78 f 99.99 g 5 h 78