Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittlePlusWithBadCharacters-0Chomped.calc
a .0%e+23 b 1.%e+25 c 2.3%e+31 d 34.5%e+45 e 6.78%e+73 f 99.99%e+56 g 3%e+93 h 76%e+45